# meta-ads-langgraph-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agents/: __init__.py  insights_agent.py
app/: __init__.py  chat.py  config.py  llm_client.py  logging_config.py
data/evaluation/: meta_ads_eval_cases.json
database/: __init__.py
docs/: module-0-python-setup.md  module-1-observability.md  module-2-evaluation.md  module-3-production.md  phase-1-architecture.md
evaluations/: __init__.py  dataset.py  evaluators.py  llm_judge.py  metrics.py  online_eval.py  pairwise.py  rubric.py  run_code_eval.py  run_langsmith_experiment.py  sync_langsmith_dataset.py
tests/: test_chat.py  test_config.py  test_evaluation_dataset.py  test_evaluation_evaluators.py  test_evaluation_metrics.py  test_evaluation_rubric.py  test_insights_agent.py  test_llm_judge.py  test_online_eval.py  test_pairwise.py  test_production_check.py
tools/: __init__.py
workflows/: __init__.py  production_check.py
